// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getBackgroundImage should return null for an undefined input 1`] = `
Object {
  "testUri": "../../../src/components/screens/member/challenges/challenge-progress/assets/brisk-walk.png",
}
`;

exports[`getBackgroundImage should return null for an undefined input 2`] = `
Object {
  "testUri": "../../../src/components/screens/member/challenges/challenge-progress/assets/short-stroll.png",
}
`;

exports[`getBackgroundImage should return null for an undefined input 3`] = `
Object {
  "testUri": "../../../src/components/screens/member/challenges/challenge-progress/assets/meditation.png",
}
`;

exports[`getBackgroundImage should return null for an undefined input 4`] = `
Object {
  "testUri": "../../../src/components/screens/member/challenges/challenge-progress/assets/long-walk.png",
}
`;

exports[`getBackgroundImageHeight should return null for an undefined input 1`] = `"auto"`;

exports[`getBackgroundImageHeight should return null for an undefined input 2`] = `900`;

exports[`getBackgroundImageHeight should return null for an undefined input 3`] = `900`;

exports[`getBackgroundImageHeight should return null for an undefined input 4`] = `900`;

exports[`getBackgroundImageHeight should return null for an undefined input 5`] = `1000`;
